[package]
name = "ct-merkle"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
keywords = ["crypto", "tls", "certficate-transparency", "ct", "hash"]
categories = ["no-std", "cryptography", "network-programming", "compression"]
description = "An implementation of the append-only log described in the Certificate Transparency specification (RFC 6962)"

[dependencies]
digest = "0.10"
generic-array = "0.14"
serde = { version = "1", optional = true, features = [ "derive" ] }

[features]
default = []
std = [ "digest/std" ]
serde = [ "dep:serde", "generic-array/serde" ]

[dev-dependencies]
hex = "0.4"
rand = { version = "0.8", features = [ "std_rng" ] }
serde_json = "1"
sha2 = "0.10"
