[package]
name = "ct-merkle"
repository = "https://github.com/rozbb/ct-merkle"
documentation = "https://docs.rs/ct-merkle"
description = "An implementation of the append-only log described in the Certificate Transparency specification (RFC 6962)"
readme = "README.md"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
keywords = ["crypto", "tls", "pki", "ct", "hash"]
categories = ["no-std", "cryptography", "network-programming", "compression"]

[dependencies]
digest = "0.10"
generic-array = "0.14"
serde = { version = "1", optional = true, features = ["derive"] }
subtle = { version = "2", default-features = false }

[features]
default = []
# Implements std::Error for all error types. Also enables known-answer tests in cargo test.
std = [ "digest/std" ]
# Implements serde::Serialize and serde::Deserialize for: CtMerkleTree, RootHash, InclusionProof,
# BatchInclusionProof, and ConsistencyProof.
serde = [ "dep:serde", "generic-array/serde" ]

[dev-dependencies]
byteorder = "1"
criterion = { version = "0.3", features = ["html_reports"] }
hex = "0.4"
rand = { version = "0.8", features = [ "std_rng" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

# Criteron benches
[[bench]]
name = "benches"
harness = false
